assets/css/style.css
/* ... */
::selection {
  background: none;
  color: #ef0d33;
}

html {
	padding: 0;
	margin: 0;
}

body {
  	font-size: 14px;
  	-webkit-font-smoothing: antialiased;
  		-moz-osx-font-smoothing: grayscale;
  	font-family: "Oswald", sans-serif;
  	color: #262626;
  	font-weight: 400;
 	margin: 0; 
}

blockquote,
ul, 
ol {
	margin: 0px;
	padding: 0;
}

ul li, 
ol li {
	margin-bottom: 0px;
}

li {
	list-style: none;
}

img {
	vertical-align: middle;
	max-width: 100%;
	border-style: none;
	width: 100%;
}

a, 
i {
	border: none;
}

button {
	padding: 0;
}

button, 
input, 
select, 
textarea {
	font-size: 14px;
	line-height: 1.75;
	font-family: 'Oswald', sans-serif;
}

a:hover {
	text-decoration: none;
}

button,
button:focus,
button:hover {
	background: none;
	border: none;
}

a:focus,
button:focus {
	outline: none;
}

p {
	margin: 30px 0 0 0;
	font-family: 'Open Sans', sans-serif;
}

a {
	font-family: 'Oswald', sans-serif;
	text-decoration: none;
	color: inherit;
}

table {
	border-collapse: collapse;
	border-spacing: 0px;
}

td,
th {
	padding: 5px;
	border: 1px solid black;
	text-align: center;
}

code, pre {
	padding: 10px;
	padding-bottom: 0;
	border-left: 3px solid #6FBF71;
	border-bottom: 1px solid transparent;
	overflow-x: scroll;
}

pre {
	display: block;	
	word-break: break-all;
	word-wrap: break-word;
}

pre code { 
	white-space: pre-wrap; 
}

h1, 
h2, 
h3, 
h4, 
h5, 
h6 {
	font-family: 'Oswald', sans-serif;
	margin: 0;
  	line-height: 1.3;
}

h1,
h2,
h3 {
  	font-weight: 700; 
}

h4,
h5 {
  	font-weight: 600; 
}

h6 {
  	font-weight: 500; 
}

h1 {
  	font-size: 42px; 
}

h2 {
  	font-size: 30px; 
}

h3 {
  	font-size: 26px; 
}

h4 {
  	font-size: 22px; 
}

h5 {
  	font-size: 18px; 
}

h6 {
  	font-size: 14px; 
}

@media only screen and (max-width: 999px) {
	
  	h1 {
    	font-size: 38px; 
    }

	h2 {
    	font-size: 28px; 
    }

	h3 {
    	font-size: 24px; 
   	} 
    
}

@media only screen and (max-width: 767px) {
	
  	h1 {
    	font-size: 36px; 
    }

	h2 {
    	font-size: 26px; 
    }

	h3 {
    	font-size: 24px; 
    } 
    
}

@media only screen and (max-width: 549px) {
	
  	h1 {
    	font-size: 34px; 
   	}
   	 
}

/* 1.1. Helpers */
.rel-pos {
	position: relative;
}

.d-block {
	display: block;
}

.d-flex {
	display: -webkit-box;
		display: -ms-flexbox;
			display: flex;
}

.d-flex-wrap {
	display: -webkit-box;
		display: -ms-flexbox;
			display: flex;
	-ms-flex-flow: wrap;
	    flex-flow: wrap;
}

.flex-center {
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
}

.top-bottom-padding-120 {
	padding-top: 120px;
	padding-bottom: 120px;
}

.top-padding-120 {
	padding-top: 120px;
}

.bottom-padding-120 {
	padding-bottom: 120px;
}

.top-bottom-padding-90 {
	padding-top: 90px;
	padding-bottom: 90px;
}

.top-padding-90 {
	padding-top: 90px;
}

.bottom-padding-90 {
	padding-bottom: 90px;
}

.top-bottom-padding-60 {
	padding-top: 60px;
	padding-bottom: 60px;
}

.top-padding-60 {
	padding-top: 60px;
}

.bottom-padding-60 {
	padding-bottom: 60px;
}

.top-bottom-padding-50 {
	padding-top: 50px;
	padding-bottom: 50px;
}

.top-padding-50 {
	padding-top: 50px;
}

.bottom-padding-50 {
	padding-bottom: 50px;
}

.top-bottom-padding-40 {
	padding-top: 40px;
	padding-bottom: 40px;
}

.top-padding-40 {
	padding-top: 40px;
}

.bottom-padding-40 {
	padding-bottom: 40px;
}

.top-bottom-padding-30 {
	padding-top: 30px;
	padding-bottom: 30px;
}

.top-padding-30 {
	padding-top: 30px;
}

.bottom-padding-30 {
	padding-bottom: 30px;
}

.top-bottom-padding-20 {
	padding-top: 20px;
	padding-bottom: 20px;
}

.top-padding-20 {
	padding-top: 20px;
}

.bottom-padding-20 {
	padding-bottom: 20px;
}

.top-bottom-padding-15 {
	padding-top: 15px;
	padding-bottom: 15px;
}

.top-padding-15 {
	padding-top: 15px;
}

.bottom-padding-15 {
	padding-bottom: 15px;
}

.top-bottom-padding-10 {
	padding-top: 10px;
	padding-bottom: 10px;
}

.top-padding-10 {
	padding-top: 10px;
}

.bottom-padding-10 {
	padding-bottom: 10px;
}

.top-bottom-padding-5 {
	padding-top: 5px;
	padding-bottom: 5px;
}

.top-padding-5 {
	padding-top: 5px;
}

.bottom-padding-5 {
	padding-bottom: 5px;
}

.top-bottom-margin-30 {
	margin-top: 30px;
	margin-bottom: 30px;
}

.bottom-margin-30 {
	margin-bottom: 30px;
}

.top-margin-30 {
	margin-top: 30px;
}

.top-bottom-margin-25 {
	margin-top: 25px;
	margin-bottom: 25px;
}

.bottom-margin-25 {
	margin-bottom: 25px;
}

.top-margin-25 {
	margin-top: 25px;
}

.top-bottom-margin-20 {
	margin-top: 20px;
	margin-bottom: 20px;
}

.bottom-margin-20 {
	margin-bottom: 20px;
}

.top-margin-20 {
	margin-top: 20px;
}

.top-bottom-margin-15 {
	margin-top: 15px;
	margin-bottom: 15px;
}

.bottom-margin-15 {
	margin-bottom: 15px;
}

.top-margin-15 {
	margin-top: 15px;
}

.top-bottom-margin-10 {
	margin-top: 10px;
	margin-bottom: 10px;
}

.bottom-margin-10 {
	margin-bottom: 10px;
}

.top-margin-10 {
	margin-top: 10px;
}

.top-bottom-margin-5 {
	margin-top: 5px;
	margin-bottom: 5px;
}

.bottom-margin-5 {
	margin-bottom: 5px;
}

.top-margin-5 {
	margin-top: 5px;
}

.content-left-right-margin-50 {
	margin-left: 50px;
	margin-right: 50px;
}

.content-right-margin-50 {
	margin-right: 50px;
}

.content-left-margin-50 {
	margin-left: 50px;
}

.content-left-right-margin-45 {
	margin-left: 45px;
	margin-right: 45px;
}

.content-right-margin-45 {
	margin-right: 45px;
}

.content-left-margin-45 {
	margin-left: 45px;
}

.content-left-right-margin-40 {
	margin-left: 40px;
	margin-right: 40px;
}

.content-right-margin-40 {
	margin-right: 40px;
}

.content-left-margin-40 {
	margin-left: 40px;
}

.content-left-right-margin-35 {
	margin-left: 35px;
	margin-right: 35px;
}

.content-right-margin-35 {
	margin-right: 35px;
}

.content-left-margin-35 {
	margin-left: 35px;
}

.content-left-right-margin-30 {
	margin-left: 30px;
	margin-right: 30px;
}

.content-right-margin-30 {
	margin-right: 30px;
}
/* ... */

